data/derived/comb/progs/unify/prog1829.ml.out
Characters 50-64:
  let f x = x*x*x in (xx, xx < 512)
                     ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
